Подключи Cloudinary для добавления аватарок участниками CLOUDINARY_URL=c

--- a/.env
+++ b/.env
@@ -1,1 +1,12 @@
-GEMINI_API_KEY=
+# Этот файл используется для хранения секретных ключей и настроек.
+# 
+# Инструкция для Cloudinary:
+# 1. Зайдите в ваш аккаунт Cloudinary.
+# 2. Перейдите в Dashboard, чтобы найти ваш "Cloud Name". Вставьте его значение ниже.
+# 3. Перейдите в Settings (иконка шестерёнки) -> Upload.
+# 4. Пролистайте вниз до "Upload presets", нажмите "Add upload preset".
+# 5. Измените "Signing Mode" с "Signed" на "Unsigned" и сохраните.
+# 6. Скопируйте "Upload preset name" и вставьте его значение ниже.
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dxac8lq4f"
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=""
