расскажи, что от меня понадобится

--- a/.env
+++ b/.env
@@ -1,12 +1,8 @@
-# Этот файл используется для хранения секретных ключей и настроек.
-# 
-# Инструкция для Cloudinary:
-# 1. Зайдите в ваш аккаунт Cloudinary.
-# 2. Перейдите в Dashboard, чтобы найти ваш "Cloud Name". Вставьте его значение ниже.
-# 3. Перейдите в Settings (иконка шестерёнки) -> Upload.
-# 4. Пролистайте вниз до "Upload presets", нажмите "Add upload preset".
-# 5. Измените "Signing Mode" с "Signed" на "Unsigned" и сохраните.
-# 6. Скопируйте "Upload preset name" и вставьте его значение ниже.
+# 1. Get your "Cloud Name" from your Cloudinary dashboard home page: https://cloudinary.com/console
+# 2. Paste it below.
 
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dxac8lq4f"
-NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=""
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dxac8lq4f
+
+# This is your upload preset. You've already provided this, so no changes are needed here.
+# It was created in Cloudinary Settings -> Upload -> Upload presets
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=unsigned_avatars
