--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
-# 1. Get your "Cloud Name" from your Cloudinary dashboard home page: https://cloudinary.com/console
-# 2. Paste it below.
+# You can get your cloud name from your Cloudinary dashboard.
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dxac8lq4f"
 
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dxac8lq4f
-
-# This is your upload preset. You've already provided this, so no changes are needed here.
-# It was created in Cloudinary Settings -> Upload -> Upload presets
-NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=unsigned_avatars
+# To create an upload preset:
+# 1. Go to your Cloudinary dashboard > Settings (gear icon) > Upload.
+# 2. Scroll down to "Upload presets" and click "Add upload preset".
+# 3. Change "Signing Mode" from "Signed" to "Unsigned".
+# 4. Give it a name (e.g., "unsigned_avatars") and click "Save".
+# 5. Copy that name here.
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET="unsigned_avatars"
