--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,42 @@
-
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Dependencies
+# dependencies
 /node_modules
 /.pnp
 .pnp.js
 
-# Testing
+# testing
 /coverage
 
-# Next.js build output
+# next.js
 /.next/
 /out/
 
-# Production
+# production
 /build
 
-# Misc
+# misc
 .DS_Store
 *.pem
 
-# Local .env file
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Turbopack
-.turbo
+# vercel
+.vercel
 
-# Bun
-.bun
+# typescript
+*.tsbuildinfo
+next-env.d.ts
 
-# Deno
-.deno
-
-# VSCode
-.vscode/
-
-# Log files
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+# studio
+.firebase/
+firebase-debug.log
