Я не хочу Cloudinary, он уже занят аватарками и изображениями в анкетах.

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # You can get your cloud name from your Cloudinary dashboard.
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dxac8lq4f"
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dxac8lq4f
 
 # To create an upload preset:
 # 1. Go to your Cloudinary dashboard > Settings (gear icon) > Upload.
@@ -7,4 +7,5 @@ NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dxac8lq4f"
 # 3. Change "Signing Mode" from "Signed" to "Unsigned".
 # 4. Give it a name (e.g., "unsigned_avatars") and click "Save".
 # 5. Copy that name here.
-NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET="unsigned_avatars"
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=ankets
+NEXT_PUBLIC_IMAGEKIT_PUBLIC_KEY=public_v04n3n3z1L18A5iA5P1Zk+scg4Q=
