public_2SFNY5PLgZnE2eA+ASCIvAsseL4=
private_3RfDgIdod/EFNl9PRExMK7wunv4

--- a/.env
+++ b/.env
@@ -1,11 +1,3 @@
-# You can get your cloud name from your Cloudinary dashboard.
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dxac8lq4f
-
-# To create an upload preset:
-# 1. Go to your Cloudinary dashboard > Settings (gear icon) > Upload.
-# 2. Scroll down to "Upload presets" and click "Add upload preset".
-# 3. Change "Signing Mode" from "Signed" to "Unsigned".
-# 4. Give it a name (e.g., "unsigned_avatars") and click "Save".
-# 5. Copy that name here.
-NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=ankets
-NEXT_PUBLIC_IMAGEKIT_PUBLIC_KEY=public_v04n3n3z1L18A5iA5P1Zk+scg4Q=
+NEXT_PUBLIC_IMAGEKIT_PUBLIC_KEY="public_2SFNY5PLgZnE2eA+ASCIvAsseL4="
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dxac8lq4f"
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET="ankets"
