--- a/PROJECT_ID/.env
+++ b/PROJECT_ID/.env
@@ -1,2 +1,3 @@
+NEXT_PUBLIC_IMAGEKIT_PUBLIC_KEY="public_2SFNY5PLgZnE2eA+ASCIvAsseL4="
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dxac8lq4f"
-NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET="unsigned_avatars"
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET="ankets"
