Error: ImageKit error: "{\"message\":\"Your request is missing authoriza

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dxac8lq4f
+NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET=ankets
 NEXT_PUBLIC_IMAGEKIT_PUBLIC_KEY="public_2SFNY5PLgZnE2eA+ASCIvAsseL4="
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="dxac8lq4f"
-NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET="ankets"
+IMAGEKIT_PRIVATE_KEY="private_3RfDgIdod/EFNl9PRExMK7wunv4="
+IMAGEKIT_URL_ENDPOINT="https://ik.imagekit.io/hnr4otz6s"
