--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,5 @@
     }
   },
   "include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "src/usr/src/app/functions/**"]
+  "exclude": ["node_modules", "src/usr/src/app/functions/**", "usr", "firestore-to-supabase"]
 }
