--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,5 @@
     }
   },
   "include": ["next-env.d.ts", "src/**/*.ts", "src/**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", "usr", "src/usr", "firestore-to-supabase"]
+  "exclude": ["node_modules", "usr", "src/usr/**", "firestore-to-supabase"]
 }
